unpackaged/main/default/objects/Q9__Batch_Helper__c/Q9__Batch_Helper__c.object-meta.xml
<CustomObject>
    <label>Batch Helper</label>
    <nameField>
        <displayFormat>BH-{0000000}</displayFormat>
        <label>Batch Helper Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>