unpackaged/main/default/objects/Q9__Batch_Helper__c/fields/Q9__Chunk_Number__c.field-meta.xml
<CustomField>
    <fullName>Q9__Chunk_Number__c</fullName>
    <label>Chunk Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>