unpackaged/main/default/objects/Q9__Batch_Helper__c/fields/Q9__Type__c.field-meta.xml
<CustomField>
    <fullName>Q9__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Population</fullName>
            </value>
            <value>
                <fullName>Picklist Values Population</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>